[tool.poetry]
name = "alembic-demo"
version = "0.1.0"
description = ""
authors = ["James Wiles <jameswiles.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
